fix: Hover Effect on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 100 900;
-  src: url(/extension-list/assets/fonts/noto-sans.woff2) format("woff2-variations");
+  src: url(../assets/fonts/noto-sans.woff2) format("woff2-variations");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
     U+2212, U+2215, U+FEFF, U+FFFD;
@@ -267,10 +267,12 @@ article > div {
   background-color: var(--neutral-7);
 }
 
-.remove-btn:hover {
-  background-color: var(--red-7);
-  color: var(--gray-0);
-  border-color: var(--red-7);
+@media (hover: hover) and (pointer: fine) {
+  .remove-btn:hover {
+    background-color: var(--red-7);
+    color: var(--gray-0);
+    border-color: var(--red-7);
+  }
 }
 
 .toggle {
